Port old sort controls component (ES6-ified) - Try SelectDropdown - Fix dropdown height, remove dropdown label - Fix handleSelectChange - Fix import export alignment - Visual fixes to sort controls

--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -1,3 +1,4 @@
+
 .following-manage__header {
 	font-weight: 600;
 	margin: 14px 0 14px 14px;
@@ -7,7 +8,7 @@
 	}
 }
 
-.following-manage__search-new {
+.following-manage .search {
 	margin: 0;
 }
 
@@ -18,15 +19,97 @@
 .following-manage__subscriptions {
 	margin-top: 20px;
 	padding-top: 10px;
-	border-top: 1px solid $gray-light;
 }
 
+// Subscription controls
 .following-manage__subscriptions-controls {
 	display: flex;
-	padding-bottom: 20px;
 
-	.reader-import-button, .reader-export-button, .following-manage__search-followed {
+	@include breakpoint( "<660px" ) {
+		flex-wrap: wrap;
+		margin: 0 15px;
+	}
+
+	> :not( :first-child ) {
 		margin-right: 10px;
+	}
+
+	.following-manage__subscriptions-heading {
+		flex: 1;
+		font-weight: 700;
+		padding-bottom: 15px;
+
+		@include breakpoint( "<480px" ) {
+			flex: 0 0 auto;
+			width: 100%;
+		}
+	}
+
+	.following-manage__subscriptions-sort,
+	.following-manage__subscriptions-search {
+
+		@include breakpoint( "<480px" ) {
+			flex: 1;
+		}
+	}
+
+	.following-manage__subscriptions-sort .following-manage__sort-controls {
+		color: darken( $gray, 10% );
+		font-size: 12px;
+		font-weight: normal;
+
+		@include breakpoint( "<480px" ) {
+			width: 100%;
+		}
+	}
+
+	.following-manage__subscriptions-search {
+		margin-top: 1px;
+
+		@include breakpoint( "<660px" ) {
+			margin-right: 0;
+		}
+	}
+
+	.following-manage__subscriptions-search .search-card {
+		box-shadow: 0 0 0 1px transparentize( lighten( $gray, 20% ), .3 );
+
+		.following-manage__search-followed-input.is-compact {
+			height: 32px;
+
+			@include breakpoint( "<660px" ) {
+				min-width: 0;
+			}
+		}
+
+		.search__input {
+			background: transparent;
+			height: 30px;
+		}
+	}
+
+	.following-manage__subscriptions-import-export {
+		margin-right: 0;
+
+		@include breakpoint( "<660px" ) {
+			display: none;
+		}
+	}
+}
+
+.following-manage__subscriptions-import-export-menu-item {
+	.reader-import-button__icon, .reader-export-button__icon {
+		vertical-align: middle;
+	}
+
+	&:hover {
+		.reader-import-button__icon, .reader-export-button__icon {
+			fill: $white;
+		}
+
+		.reader-import-button__label, .reader-export-button__label {
+			color: $white;
+		}
 	}
 }
 
